// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HabitStreak Component handles negative streak values 1`] = `<View />`;

exports[`HabitStreak Component handles zero-value best streaks 1`] = `<View />`;

exports[`HabitStreak Component renders a sliver bar for zero-value current streaks 1`] = `
<View
  style={
    Object {
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
        },
        Object {
          "color": "#2AAD5E",
        },
      ]
    }
  >
    Streaks
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
          "width": 35,
        }
      }
    >
      Now
    </Text>
    <View
      style={
        Array [
          Object {
            "height": 20,
            "marginRight": 5,
          },
          Object {
            "backgroundColor": "#2AAD5E",
            "width": 2,
          },
        ]
      }
    />
    <Text
      style={
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
        }
      }
    >
      0
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
          "width": 35,
        }
      }
    >
      Best
    </Text>
    <View
      style={
        Array [
          Object {
            "height": 20,
            "marginRight": 5,
          },
          Object {
            "backgroundColor": "#2AAD5E",
            "width": 450,
          },
        ]
      }
    />
    <Text
      style={
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
        }
      }
    >
      10
    </Text>
  </View>
</View>
`;

exports[`HabitStreak Component renders bars for the current and best streak 1`] = `
<View
  style={
    Object {
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
        },
        Object {
          "color": "#8066C2",
        },
      ]
    }
  >
    Streaks
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
          "width": 35,
        }
      }
    >
      Now
    </Text>
    <View
      style={
        Array [
          Object {
            "height": 20,
            "marginRight": 5,
          },
          Object {
            "backgroundColor": "#8066C2",
            "width": 67.5,
          },
        ]
      }
    />
    <Text
      style={
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
        }
      }
    >
      3
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
          "width": 35,
        }
      }
    >
      Best
    </Text>
    <View
      style={
        Array [
          Object {
            "height": 20,
            "marginRight": 5,
          },
          Object {
            "backgroundColor": "#8066C2",
            "width": 450,
          },
        ]
      }
    />
    <Text
      style={
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
        }
      }
    >
      20
    </Text>
  </View>
</View>
`;

exports[`HabitStreak Component renders identical bars for equal current and best 1`] = `
<View
  style={
    Object {
      "marginBottom": 10,
      "marginTop": 10,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
        },
        Object {
          "color": "#E04747",
        },
      ]
    }
  >
    Streaks
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
          "width": 35,
        }
      }
    >
      Now
    </Text>
    <View
      style={
        Array [
          Object {
            "height": 20,
            "marginRight": 5,
          },
          Object {
            "backgroundColor": "#E04747",
            "width": 450,
          },
        ]
      }
    />
    <Text
      style={
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
        }
      }
    >
      10
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
          "width": 35,
        }
      }
    >
      Best
    </Text>
    <View
      style={
        Array [
          Object {
            "height": 20,
            "marginRight": 5,
          },
          Object {
            "backgroundColor": "#E04747",
            "width": 450,
          },
        ]
      }
    />
    <Text
      style={
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
        }
      }
    >
      10
    </Text>
  </View>
</View>
`;
